--- a/src/app/riport/beszerzes/beszerzes.component.html
+++ b/src/app/riport/beszerzes/beszerzes.component.html
@@ -4,11 +4,37 @@
   <form #f="ngForm" (ngSubmit)="submit()">
 
     <div class="row no-gutters editform-row">
-
+      <div class="col-md-2">
+        <div class="editform-title">A teljesítés kelte</div>
+      </div>
+      <div class="col-md-2">
+        <input type="date" class="form-control form-control-sm" id="tol"
+               [(ngModel)]="tol" name="tol">
+      </div>
     </div>
-
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2"></div>
+      <div class="col-md-2">
+        <input type="date" class="form-control form-control-sm" id="ig"
+               [(ngModel)]="ig" name="ig">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Részletek is</div>
+      </div>
+      <div class="col-md-2">
+        <select type="text" class="form-control form-control-sm"
+                [(ngModel)]="reszletekis" name="reszletekis">
+          <option value="false">Nem</option>
+          <option value="true">Igen</option>
+        </select>
+      </div>
+    </div>
     <div class="row no-gutters" style="margin-bottom: 10px">
+      <div class="col-md-2"></div>
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="megsem()">Mégsem</button>
     </div>
   </form>
   <app-errormodal [cim]="riportservice.cim"></app-errormodal>
