--- a/src/app/riport/koveteles/koveteles.component.html
+++ b/src/app/riport/koveteles/koveteles.component.html
@@ -4,11 +4,19 @@
   <form #f="ngForm" (ngSubmit)="submit()">
 
     <div class="row no-gutters editform-row">
-
+      <div class="col-md-2">
+        <div class="editform-title">Dátum</div>
+      </div>
+      <div class="col-md-2">
+        <input type="date" class="form-control form-control-sm" id="datum"
+               [(ngModel)]="datum" name="datum">
+      </div>
     </div>
 
     <div class="row no-gutters" style="margin-bottom: 10px">
+      <div class="col-md-2"></div>
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="megsem()">Mégsem</button>
     </div>
   </form>
   <app-errormodal [cim]="riportservice.cim"></app-errormodal>
