--- a/src/app/segedeszkoz/particio/particio-nav/particio-nav.component.html
+++ b/src/app/segedeszkoz/particio/particio-nav/particio-nav.component.html
@@ -1,3 +1,13 @@
-<p>
-  particio-nav works!
-</p>
+<div class="alapkeret">
+  <h5>NAV</h5>
+
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
+
+    <div class="row no-gutters" style="margin-bottom: 10px">
+      <div class="col-md-2"></div>
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+    </div>
+  </form>
+  <app-errormodal [cim]="particioservice.cim"></app-errormodal>
+</div>
