--- a/src/app/segedeszkoz/particio/particio-projekt/particio-projekt.component.html
+++ b/src/app/segedeszkoz/particio/particio-projekt/particio-projekt.component.html
@@ -1,3 +1,94 @@
-<p>
-  particio-projekt works!
-</p>
+<div class="alapkeret">
+  <h5>Projekt</h5>
+
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
+    <div class="row no-gutters editform-row">
+      <div class="col-md-3">
+        <div class="editform-title">Ajánlat iratkód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m1"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.PROJEKT_AJANLAT_IRATKOD" name="m1">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-3">
+        <div class="editform-title">Elégedettségi felmérés iratkód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m2"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.PROJEKT_ELEGEDETTSEGIFELMERES_IRATKOD" name="m2">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-3">
+        <div class="editform-title">Készrejelentés Démász iratkód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m3"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.PROJEKT_KESZREJELENTES_DEMASZ_IRATKOD" name="m3">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-3">
+        <div class="editform-title">Készrejelentés Elmü/Émász iratkód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m4"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.PROJEKT_KESZREJELENTES_ELMUEMASZ_IRATKOD" name="m4">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-3">
+        <div class="editform-title">Készrejelentés Eon iratkód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m5"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.PROJEKT_KESZREJELENTES_EON_IRATKOD" name="m5">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-3">
+        <div class="editform-title">Munkalap iratkód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m6"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.PROJEKT_MUNKALAP_IRATKOD" name="m6">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-3">
+        <div class="editform-title">Szállítási szerződés iratkód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m7"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.PROJEKT_SZALLITASISZERZODES_IRATKOD" name="m7">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-3">
+        <div class="editform-title">Szerződés iratkód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m8"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.PROJEKT_SZERZODES_IRATKOD" name="m8">
+      </div>
+    </div>
+
+    <div class="row no-gutters" style="margin-bottom: 10px">
+      <div class="col-md-3"></div>
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+    </div>
+  </form>
+  <app-errormodal [cim]="particioservice.cim"></app-errormodal>
+</div>
+
