--- a/src/app/eszkoz/feliratkozas/feliratkozasegy/feliratkozasegy.component.html
+++ b/src/app/eszkoz/feliratkozas/feliratkozasegy/feliratkozasegy.component.html
@@ -1,57 +1,22 @@
 <div class="alapkeret">
   <h5>{{feliratkozasservice.cim}}</h5>
+  <h6 *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">
+    {{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].FELIRATKOZASKOD}} {{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].NEV}}, {{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].TELEPULES}}
+  </h6>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
-        Vissza a listához
+        <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
+      </button>
+      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
       <button [disabled]="eppFrissit || feliratkozasservice.DtoSelectedIndex === -1" (click)="projekt()" class="btn btn-sm btn-outline-primary navgomb">
         Projekt
       </button>
     </nav>
   </div>
-  <div style="float: left;border: solid 1px silver;margin-right: 10px;margin-bottom: 5px;padding: 10px">
-    <table>
-      <tbody>
-      <tr>
-        <td class="egylabel">Id:</td>
-        <td *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">{{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].FELIRATKOZASKOD}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Lista:</td>
-        <td *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">{{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].LISTA}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Név:</td>
-        <td *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">{{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].NEV}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Cím:</td>
-        <td *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">{{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].TELEPULES}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Email:</td>
-        <td *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">{{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].EMAIL}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Telefonszám:</td>
-        <td *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">{{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].TELEFONSZAM}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Megjegyzés:</td>
-        <td *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">{{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].MEGJEGYZES}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Létrehozta:</td>
-        <td *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">{{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].LETREHOZTA}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Létrehozva:</td>
-        <td *ngIf="feliratkozasservice.DtoSelectedIndex !== -1">{{feliratkozasservice.Dto[feliratkozasservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+
   <router-outlet></router-outlet>
   <app-errormodal [cim]="feliratkozasservice.cim"></app-errormodal>
 </div>
