--- a/src/app/eszkoz/irat/irategy/irategy.component.html
+++ b/src/app/eszkoz/irat/irategy/irategy.component.html
@@ -1,16 +1,22 @@
 <div class="alapkeret">
   <h5>{{iratservice.cim}}</h5>
+  <h6 *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].IRATKOD}} {{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELNEV}}, {{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELCIM}}</h6>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
-        Vissza a listához
+        <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
+      </button>
+      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
 
-      <button [disabled]="eppFrissit || iratservice.DtoSelectedIndex === -1" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || iratservice.DtoSelectedIndex === -1"
+              (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit || iratservice.DtoSelectedIndex === -1" (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
-        <i class="fa fa-caret-up" aria-hidden="true"></i>
+      <button [disabled]="eppFrissit || iratservice.DtoSelectedIndex === -1"
+              (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
 
       <button [disabled]="eppFrissit || iratservice.DtoSelectedIndex === -1" (click)="dokumentum()" class="btn btn-sm btn-outline-primary navgomb">
@@ -18,60 +24,7 @@
       </button>
     </nav>
   </div>
-  <div  style="float: left;width: 300px;border: solid 1px silver;margin-right: 10px;margin-bottom: 5px;padding: 10px">
-    <table class="table ng table-bordered table-sm table-responsive" style="border: none">
-      <tbody>
-      <tr>
-        <td class="egylabel">Id:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].IRATKOD}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Irány:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].IRANY}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Keletkezett:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].KELETKEZETT | datehun}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Irattipus:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].IRATTIPUS}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Ügyfélnév:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELNEV}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Ügyfélcím:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELCIM}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Küldő:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].KULDO}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Tárgy:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].TARGY}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Létrehozta:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].LETREHOZTA}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Létrehozva:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Módosította:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].MODOSITOTTA}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Módosítva:</td>
-        <td *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+
   <router-outlet></router-outlet>
   <app-errormodal [cim]="iratservice.cim"></app-errormodal>
 </div>
