--- a/src/app/segedeszkoz/csoport/csoportegy/csoport-reszletek/csoport-reszletek.component.html
+++ b/src/app/segedeszkoz/csoport/csoportegy/csoport-reszletek/csoport-reszletek.component.html
@@ -1,33 +1,31 @@
 <div class="alapkeret">
   <h5>{{csoportservice.cim}} részletesen</h5>
-  <div style="float: left;border: solid 1px silver;margin-right: 10px;margin-bottom: 5px;padding: 10px">
-    <table>
-      <tbody>
-      <tr>
-        <td class="egylabel">Id:</td>
-        <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].CSOPORTKOD}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Csoport:</td>
-        <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].CSOPORT1}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Létrehozta:</td>
-        <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].LETREHOZTA}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Létrehozva:</td>
-        <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Módosította:</td>
-        <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].MODOSITOTTA}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Módosítva:</td>
-        <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+  <table class="table ng table-bordered table-sm table-responsive" style="border: none">
+    <tbody>
+    <tr>
+      <td class="egylabel">Id:</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].CSOPORTKOD}}</td>
+    </tr>
+    <tr>
+      <td class="egylabel">Csoport:</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].CSOPORT1}}</td>
+    </tr>
+    <tr>
+      <td class="egylabel">Létrehozta:</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].LETREHOZTA}}</td>
+    </tr>
+    <tr>
+      <td class="egylabel">Létrehozva:</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+    </tr>
+    <tr>
+      <td class="egylabel">Módosította:</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+    </tr>
+    <tr>
+      <td class="egylabel">Módosítva:</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+    </tr>
+    </tbody>
+  </table>
 </div>
