--- a/src/app/segedeszkoz/csoport/csoportegy/csoportegy.component.html
+++ b/src/app/segedeszkoz/csoport/csoportegy/csoportegy.component.html
@@ -4,10 +4,10 @@
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
-        <i class="fa fa-arrow-left" aria-hidden="true"></i>
+        <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
       </button>
       <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
-        <i class="fa fa-file" aria-hidden="true"></i>
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
 
       <button [disabled]="eppFrissit || csoportservice.DtoSelectedIndex === -1"
@@ -16,7 +16,7 @@
       </button>
       <button [disabled]="eppFrissit || csoportservice.DtoSelectedIndex === -1"
               (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
-        <i class="fa fa-caret-up" aria-hidden="true"></i>
+        <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit"
               (click)="felhasznalo()" class="btn btn-sm btn-outline-primary navgomb">
