--- a/src/app/torzs/primitiv/irattipus/irattipusegy/irattipusegy.component.html
+++ b/src/app/torzs/primitiv/irattipus/irattipusegy/irattipusegy.component.html
@@ -7,7 +7,7 @@
         <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
       </button>
       <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
-        <<i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
 
       <button [disabled]="eppFrissit || irattipusservice.DtoSelectedIndex === -1 || !mod"
@@ -16,7 +16,7 @@
       </button>
       <button [disabled]="eppFrissit || irattipusservice.DtoSelectedIndex === -1 || !mod"
               (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
-        <i class="fa fa-caret-up" aria-hidden="true"></i>
+        <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
     </nav>
   </div>
