--- a/src/app/torzs/primitiv/me/meegy/meegy.component.html
+++ b/src/app/torzs/primitiv/me/meegy/meegy.component.html
@@ -16,7 +16,7 @@
       </button>
       <button [disabled]="eppFrissit || meservice.DtoSelectedIndex === -1 || !mod"
               (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
-        <i class="fa fa-caret-up" aria-hidden="true"></i>
+        <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
     </nav>
   </div>
