--- a/src/app/eszkoz/feliratkozas/feliratkozasegy/feliratkozasegy.component.html
+++ b/src/app/eszkoz/feliratkozas/feliratkozasegy/feliratkozasegy.component.html
@@ -5,13 +5,13 @@
   </h6>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
+      <button (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
       </button>
-      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+      <button (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
-      <button [disabled]="eppFrissit || feliratkozasservice.DtoSelectedIndex === -1" (click)="projekt()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="feliratkozasservice.DtoSelectedIndex === -1" (click)="projekt()" class="btn btn-sm btn-outline-primary navgomb">
         Projekt
       </button>
     </nav>
