--- a/src/app/eszkoz/irat/irategy/irat-dokumentum/irat-dokumentumegy/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/eszkoz/irat/irategy/irat-dokumentum/irat-dokumentumegy/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -1,3 +1,20 @@
-<p>
-  dokumentum-feltoltes works!
-</p>
+<div class="alapkeret">
+  <h5>{{dokumentumservice.cim}} feltöltés</h5>
+
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
+
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-6">
+        <input type="file" (change)="onFileChange($event)" #fileInput>
+      </div>
+    </div>
+
+    <div class="row no-gutters" style="margin-bottom: 10px">
+      <div class="col-md-2"></div>
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+    </div>
+  </form>
+</div>
