--- a/src/app/eszkoz/projekt/projektegy/projektegy.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projektegy.component.html
@@ -1,9 +1,13 @@
 <div class="alapkeret">
   <h5>{{projektservice.cim}}</h5>
+  <h6 *ngIf="projektservice.DtoSelectedIndex !== -1">{{projektservice.Dto[projektservice.DtoSelectedIndex].UGYFELNEV}}, {{projektservice.Dto[projektservice.DtoSelectedIndex].UGYFELCIM}}</h6>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
-        Vissza a listához
+        <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
+      </button>
+      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
 
       <button [disabled]="eppFrissit || projektservice.uj" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
@@ -11,7 +15,7 @@
       </button>
 
       <button [disabled]="eppFrissit || projektservice.uj" (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
-        <i class="fa fa-caret-up" aria-hidden="true"></i>
+        <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
 
       <button [disabled]="eppFrissit || projektservice.uj" (click)="muszakiallapot()" class="btn btn-sm btn-outline-primary navgomb">
@@ -41,116 +45,7 @@
       </button>
     </nav>
   </div>
-  <div  style="float: left;width: 300px;border: solid 1px silver;margin-right: 10px;margin-bottom: 5px;padding: 10px">
-    <table class="table ng table-bordered table-sm table-responsive" style="border: none">
-      <tbody>
-      <tr>
-        <td class="egylabel">Id:</td>
-        <td>{{projektservice.DtoSelected.PROJEKTKOD}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Stsz:</td>
-        <td>{{projektservice.DtoSelected.STATUSZ}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Műszaki állapot:</td>
-        <td>{{projektservice.DtoSelected.MUSZAKIALLAPOT}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Ügyfél:</td>
-        <td>{{projektservice.DtoSelected.UGYFELNEV}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Cím:</td>
-        <td>{{projektservice.DtoSelected.UGYFELCIM}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Telefon:</td>
-        <td>{{projektservice.DtoSelected.UGYFELTELEFONSZAM}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Email:</td>
-        <td>{{projektservice.DtoSelected.UGYFELEMAIL}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Telepítési cím:</td>
-        <td>{{projektservice.DtoSelected.TELEPITESICIM}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">A projekt jellege:</td>
-        <td>{{projektservice.DtoSelected.PROJEKTJELLEGE}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Inverter:</td>
-        <td>{{projektservice.DtoSelected.INVERTER}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel"></td>
-        <td>{{projektservice.DtoSelected.INVERTERALLAPOT}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Napelem:</td>
-        <td>{{projektservice.DtoSelected.NAPELEM}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel"></td>
-        <td>{{projektservice.DtoSelected.NAPELEMALLAPOT}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">DC, kW:</td>
-        <td>{{projektservice.DtoSelected.DCKW}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">AC, kVA:</td>
-        <td>{{projektservice.DtoSelected.ACKVA}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Vállalási ár, netto:</td>
-        <td>{{projektservice.DtoSelected.VALLALASIARNETTO}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Pénznem:</td>
-        <td>{{projektservice.DtoSelected.PENZNEM}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Munkalapszám:</td>
-        <td>{{projektservice.DtoSelected.MUNKALAPSZAM}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Keletkezett:</td>
-        <td>{{projektservice.DtoSelected.KELETKEZETT | datehun}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Megrendelve:</td>
-        <td>{{projektservice.DtoSelected.MEGRENDELVE | datehun}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Kivitelezési határidő:</td>
-        <td>{{projektservice.DtoSelected.KIVITELEZESIHATARIDO | datehun}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Megjegyzés:</td>
-        <td>{{projektservice.DtoSelected.MEGJEGYZES}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Létrehozta:</td>
-        <td>{{projektservice.DtoSelected.LETREHOZTA}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Létrehozva:</td>
-        <td>{{projektservice.DtoSelected.LETREHOZVA | datetimehun}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Módosította:</td>
-        <td>{{projektservice.DtoSelected.MODOSITOTTA}}</td>
-      </tr>
-      <tr>
-        <td class="egylabel">Módosítva:</td>
-        <td>{{projektservice.DtoSelected.MODOSITVA | datetimehun}}</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+
   <router-outlet></router-outlet>
   <app-errormodal [cim]="projektservice.cim"></app-errormodal>
 </div>
