--- a/src/app/eszkoz/projekt/projektegy/projekt-inverter/projekt-inverter.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projekt-inverter/projekt-inverter.component.html
@@ -1,3 +1,39 @@
 <div class="alapkeret">
   <h5>Inverter</h5>
+
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
+
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Inverter</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="inverter"
+               maxlength="50" autocomplete="off"
+               [(ngModel)]="projektservice.DtoEdited.INVERTER"
+               name="inverter">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Inverter státusz</div>
+      </div>
+      <div class="col-md-4">
+        <div *ngFor="let entry of entries" class="form-check">
+          <input class="form-check-input" type="radio" name="radiogroup" id="entry"
+                 [checked]="entry === projektservice.DtoEdited.INVERTERALLAPOT" (change)="change(entry)">
+          <label class="form-check-label" for="entry">
+            {{entry}}
+          </label>
+        </div>
+      </div>
+    </div>
+
+    <div class="row no-gutters" style="margin-bottom: 10px">
+      <div class="col-md-2"></div>
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+    </div>
+  </form>
+  <app-errormodal [cim]="projektservice.cim"></app-errormodal>
 </div>
