--- a/src/app/eszkoz/projekt/projektegy/projekt-statusz/projekt-statusz.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projekt-statusz/projekt-statusz.component.html
@@ -1,16 +1,16 @@
 <div class="alapkeret">
-  <h5>Műszaki állapot</h5>
+  <h5>Státusz</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
       <div class="col-md-2">
-        <div class="editform-title">Műszaki állapot</div>
+        <div class="editform-title">Státusz</div>
       </div>
       <div class="col-md-4">
-        <div *ngFor="let entry of entries" class="form-check">
+        <div *ngFor="let entry of entries;let i = index" class="form-check">
           <input class="form-check-input" type="radio" name="radiogroup" id="entry"
-                 [checked]="entry === projektservice.DtoEdited.MUSZAKIALLAPOT" (change)="change(entry)">
+                 [checked]="i === projektservice.DtoEdited.STATUSZ" (change)="change(i)">
           <label class="form-check-label" for="entry">
             {{entry}}
           </label>
@@ -26,3 +26,4 @@
   </form>
   <app-errormodal [cim]="projektservice.cim"></app-errormodal>
 </div>
+
