--- a/src/app/eszkoz/projekt/projektegy/projekt-teendo/projekt-teendo.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projekt-teendo/projekt-teendo.component.html
@@ -1,3 +1,35 @@
 <div class="alapkeret">
-  <h5>Teendő</h5>
+  <h5>{{projektteendoservice.cim}}</h5>
+  <div>
+    <nav>
+      <button (click)="uj()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
+      </button>
+    </nav>
+  </div>
+  <table class="table table-bordered table-sm table-responsive" style="border: none">
+    <thead>
+    <tr>
+      <th>Id</th>
+      <th>Dedikálva</th>
+      <th>Határidő</th>
+      <th>Elvégezve</th>
+      <th>Teendő</th>
+    </tr>
+    </thead>
+    <tbody>
+    <ng-container *ngFor="let item of projektteendoservice.Dto; let i = index">
+      <tr>
+        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer" (click)="setClickedRow(i)">{{item.PROJEKTTEENDOKOD}}</td>
+        <td>{{item.DEDIKALVA}}</td>
+        <td>{{item.HATARIDO | datehun}}</td>
+        <td>{{item.ELVEGEZVE | datehun}}</td>
+        <td>{{item.TEENDO}}</td>
+      </tr>
+      <tr *ngIf="item.LEIRAS !== null && item.LEIRAS !== ''">
+        <td colspan="5">{{item.LEIRAS}}</td>
+      </tr>
+    </ng-container>
+    </tbody>
+  </table>
 </div>
